--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ repositories {
 }
 
 dependencies {
-    groovy group: 'org.codehaus.groovy', name: 'groovy', version: '2.1.5'
+    compile group: 'org.codehaus.groovy', name: 'groovy', version: '2.1.6'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
