--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ repositories {
 
 dependencies {
     compile group: 'org.codehaus.groovy', name: 'groovy', version: '2.3.7'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'junit', name: 'junit', version: '4.12-beta-3'
 }
 
 task uberjar(type: Jar) {
